kustomized/mastodon_template.yaml
---
# Source: mastodon/templates/service-streaming.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mastodon-streaming
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: streaming
      protocol: TCP
      name: streaming
  selector:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: streaming
---
# Source: mastodon/templates/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mastodon-web
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: web
---
# Source: mastodon/templates/deployment-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mastodon-sidekiq-all-queues
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: sidekiq-all-queues
    app.kubernetes.io/part-of: rails
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: sidekiq-all-queues
      app.kubernetes.io/part-of: rails
  template:
    metadata:
      annotations:
        # roll the pods to pick up any db migrations or other changes
        
        rollme: "1"
        checksum/config-secrets: "6f87d238913b8c6261003f6a5bfb7e0903bf243211bbb6e3ca31d259b3a6a4e7"
        checksum/config-configmap: "b53166c45249cb5205ecc0a31aecea8f950c9fb82b2e74d46a99aa4e6e884813"
        checksum/config-secrets: "cacb51583febadec4e31a9c7d62a83cd5eb1437f07a9d5c84dfe1a601674cae4"
      labels:
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: sidekiq-all-queues
        app.kubernetes.io/part-of: rails
    spec:
      serviceAccountName: release-name-mastodon
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: release-name-mastodon-assets
        - name: system
          persistentVolumeClaim:
            claimName: release-name-mastodon-system
      containers:
        - name: mastodon
          securityContext:
            {}
          image: "tootsuite/mastodon:v4.1.0"
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - sidekiq
            - -c
            - "25"
            - -q
            - "default,8"
            - -q
            - "push,6"
            - -q
            - "ingress,4"
            - -q
            - "mailers,2"
            - -q
            - "pull"
            - -q
            - "scheduler"
          volumeMounts:
            - name: assets
              mountPath: /opt/mastodon/public/assets
            - name: system
              mountPath: /opt/mastodon/public/system
          resources:
            limits:
              cpu: "1"
              memory: 768Mi
            requests:
              cpu: 250m
              memory: 512Mi
---
# Source: mastodon/templates/deployment-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mastodon-streaming
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: streaming
  template:
    metadata:
      annotations:
        # roll the pods to pick up any db migrations or other changes
        
        rollme: "1"
        checksum/config-secrets: "6f87d238913b8c6261003f6a5bfb7e0903bf243211bbb6e3ca31d259b3a6a4e7"
        checksum/config-configmap: "b53166c45249cb5205ecc0a31aecea8f950c9fb82b2e74d46a99aa4e6e884813"
      labels:
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: streaming
    spec:
      serviceAccountName: release-name-mastodon
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      containers:
        - name: mastodon-streaming
          image: "tootsuite/mastodon:v4.1.0"
          imagePullPolicy: IfNotPresent
          command:
            - node
            - ./streaming
          ports:
            - name: streaming
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          readinessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 128Mi
---
# Source: mastodon/templates/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mastodon-web
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: web
      app.kubernetes.io/part-of: rails
  template:
    metadata:
      annotations:
        # roll the pods to pick up any db migrations or other changes
        
        rollme: "1"
        checksum/config-secrets: "6f87d238913b8c6261003f6a5bfb7e0903bf243211bbb6e3ca31d259b3a6a4e7"
        checksum/config-configmap: "b53166c45249cb5205ecc0a31aecea8f950c9fb82b2e74d46a99aa4e6e884813"
      labels:
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: rails
    spec:
      serviceAccountName: release-name-mastodon
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: release-name-mastodon-assets
        - name: system
          persistentVolumeClaim:
            claimName: release-name-mastodon-system
      containers:
        - name: mastodon-web
          image: "tootsuite/mastodon:v4.1.0"
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - puma
            - -C
            - config/puma.rb
          volumeMounts:
            - name: assets
              mountPath: /opt/mastodon/public/assets
            - name: system
              mountPath: /opt/mastodon/public/system
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 1280Mi
            requests:
              cpu: 250m
              memory: 768Mi
---
# Source: mastodon/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-mastodon
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: cluster-letsencrypt-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "faultycloud.social"
        - "mastodon.faultycloud.work"
      secretName: mastodon-tls
  rules:
    - host: "faultycloud.social"
      http:
        paths:
          - path: /
            backend:
              service:
                name: release-name-mastodon-web
                port:
                  number: 3000
            pathType: Prefix
          - path: /api/v1/streaming
            backend:
              service:
                name: release-name-mastodon-streaming
                port:
                  number: 4000
            pathType: Prefix
    - host: "mastodon.faultycloud.work"
      http:
        paths:
          - path: /
            backend:
              service:
                name: release-name-mastodon-web
                port:
                  number: 3000
            pathType: Prefix
          - path: /api/v1/streaming
            backend:
              service:
                name: release-name-mastodon-streaming
                port:
                  number: 4000
            pathType: Prefix
---
# Source: mastodon/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-mastodon-test-connection"
  labels:
    helm.sh/chart: mastodon-4.1.1
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v4.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-mastodon-web:80']
  restartPolicy: Never
